--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.1.2",
     "ws": "^8.18.3",
     "zod": "^4.0.15",
     "zxcvbn": "^4.4.2"
