--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "recharts": "^3.1.2",
     "ws": "^8.18.3",
     "zod": "^4.0.15",
+    "zustand": "^5.0.8",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
