--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:all": "concurrently -k \"npm run dev\" \"npm run ws\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
+    "ws": "node server/ws-server.js",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -42,6 +44,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.2",
     "eslint-config-next": "15.4.5",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsdoc": "^54.3.0",
